# frankik

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  build_wheels.yaml  patch_release.yaml  release.yaml
benchmarks/: README.md  benchmarks.py  requirements.txt
src/frankik/: __init__.py  _core.pyi
src/pybind/: CMakeLists.txt  bindings.cpp  frankik.h
src/tests/: test_example.py  test_kinematics.py
